<resources>
    <string name="app_name">ToDoApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_test_nav_drawer">TestNavDrawer</string>

    <string name="DeleteNote">Are you Sure?</string>

    <string name="action_settings">Settings</string>

    <string name="timezoneUkraine">Ukraine,Kiev</string>
    <string name="timezoneUK">Uk,London</string>
    <string name="timezoneLA">"America/Los_Angeles"</string>
    <!--Date-->
    <!--Days-->
    <string name="today">Today</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sanday</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <!--Month-->
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>

    <!--Editor Activity-->
    <string name="description">Description</string>
    <string name="timeEventStart">Time event Start</string>
    <string name="timeEventEnd">Time event End</string>
    <string name="dateEventStart">Date event Start</string>
    <string name="dateEventEnd">Date event End</string>
    <string name="name_of_event">Enter name of event</string>
    <string name="hole_day">Hole day</string>
    <!--Editor Activity End-->

    <!-- Strings to Settings Activity-->

    <!-- End Settings Activity-->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
             from https://console.developers.google.com/ -->
    <string name="server_client_id">964105172041-f9d0eq4lglq1po7u28j115usdeknmgcp.apps.googleusercontent.com</string>

    <!-- Drawer Items -->
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="sign_in_button">Sign In</string>
    <string name="user_email_string">User Email</string>

</resources>
